syntax = "proto3";
package icp.applications.transfer.v1;

option go_package = "github.com/creatachain/creata-sdk/x/icp/applications/transfer/types";

import "gogoproto/gogo.proto";
import "icp/applications/transfer/v1/transfer.proto";

// GenesisState defines the icp-transfer genesis state
message GenesisState {
  string              port_id      = 1 [(gogoproto.moretags) = "yaml:\"port_id\""];
  repeated DenomTrace denom_traces = 2 [
    (gogoproto.castrepeated) = "Traces",
    (gogoproto.nullable)     = false,
    (gogoproto.moretags)     = "yaml:\"denom_traces\""
  ];
  Params params = 3 [(gogoproto.nullable) = false];
}
