syntax = "proto3";
package icp.core.types.v1;

option go_package = "github.com/creatachain/creata-sdk/x/icp/core/types";

import "gogoproto/gogo.proto";
import "icp/core/client/v1/genesis.proto";
import "icp/core/connection/v1/genesis.proto";
import "icp/core/channel/v1/genesis.proto";

// GenesisState defines the icp module's genesis state.
message GenesisState {
  // ICS002 - Clients genesis state
  icp.core.client.v1.GenesisState client_genesis = 1
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"client_genesis\""];
  // ICS003 - Connections genesis state
  icp.core.connection.v1.GenesisState connection_genesis = 2
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"connection_genesis\""];
  // ICS004 - Channel genesis state
  icp.core.channel.v1.GenesisState channel_genesis = 3
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"channel_genesis\""];
}
