syntax = "proto3";
package icp.lightclients.localhost.v1;

import "gogoproto/gogo.proto";
import "icp/core/client/v1/client.proto";

option go_package = "github.com/creatachain/creata-sdk/x/icp/light-clients/09-localhost/types";

// ClientState defines a loopback (localhost) client. It requires (read-only)
// access to keys outside the client prefix.
message ClientState {
  option (gogoproto.goproto_getters) = false;
  // self chain ID
  string chain_id = 1 [(gogoproto.moretags) = "yaml:\"chain_id\""];
  // self latest block height
  icp.core.client.v1.Height height = 2 [(gogoproto.nullable) = false];
}
